2002-12-02  Brent Welch <welch@panasas.com>
        * Merged the tclhttpd-3-4-rel branch into the trunk.
          tclhttpd-3-4-rel-3 represents the 3.4.3 release and
          the merge point.  This sets the version numbers to
          3.4.3, which isn't strictly correct, but reflects
          the merge.

2002-12-02  Wojciech Kocjan (via Brent Welch)
        * lib/httpd.tcl: added data(headerlist) that records the header
        information in order so the AOLserver emulation can recreate
        the exact MIME headers of the request.
        * lib/url.tcl: added a URL access hook return code of "return"
        which just means "I've serviced this URL request completely".

2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: better DESTDIR/libdir support (steffen)

2002-08-30  Brent Welch <welch@panasas.com>
        * Merged the tclhttpd-3-4-rel branch into the trunk.
          tclhttpd-3-4-rel-1 represents the 3.4.1 release and
          the merge point.

2002-10-28  Brent Welch <welch@panasas.com>
        * Makefile.in: MAKE_LIB doesn't work for building two different
          extensions, so I fixed that.  The Makefile is now Unix-specific
          for the limit and crypt .so files, which is OK.  These now build.

2002-10-28  Brent Welch <welch@panasas.com>
        * bin/httpdthread.tcl: Fixed loading of custom code.
        * Bumped version to 3.4.3

2002-10-14  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).
        * DIST_build/Makefile.boot: Fixed version reference
        * VERSION: updated notes
        * tagged tclhttpd-3-4-rel-2 (3.4.2)

2002-09-23  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).
        * lib/upload.tcl: Added the completion callback to UploadTidyUp.

2002-09-15  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).
        * lib/doc.tcl: ensure we don't try to cache a template result