@@ -7,6 +7,8 @@ setuid.c	setuid Tcl command implementation, used to change
 utime.c		utime Tcl command implementation, used to change
 		file modify times
 
+This is ancient, ancient java code that is unlikely to work anymore.
+
 Auth.java 	Applet that gets a password and signs form data
 Getpass.java	UI subset of Auth.java
 Getpass.jui	SpecJava ui file for GetPass
