@@ -1,3 +1,7 @@
+2003-5-01  Brent Welch <welch@panasas.com>
+        * Removed the precompiled .so files as those cause more
+          trouble than they are worth.
+
 2002-12-02  Brent Welch <welch@panasas.com>
         * Merged the tclhttpd-3-4-rel branch into the trunk.
           tclhttpd-3-4-rel-3 represents the 3.4.3 release and
